2013-10-08 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added STATDotParser and use for STATview parsing
	* scripts/STATview.py : added originallabel attribute to temp dot files

2013-10-08 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STAT[helper,view].py : use newlines for joined node labels

2013-10-02 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.[C,h] : added ability to specify dot filename on gather
	* src/STAT_FrontEnd.[C,h] : modified dot file naming convention

2013-10-02 Gregory L. Lee <lee218@llnl.gov>
	* scripts/*.py : PEP8 conformance (except line length)
	* scripts/*.py : pylint suggested fixes

2013-09-05 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : need to pick up decompose_node for TO

2013-08-29 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : set BG/Q timeout value to 10 minutes
	* src/STAT_BackEnd.C : fixed valgrind-reported uninit memory condition

2013-08-01 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : maintain user zoom for undo/redo

2013-07-31 Gregory L. Lee <lee218@llnl.gov>
	* scr/STAT.i : added higher-level Python wrapping
	* examples/scripts/script_test.py : added basic test suite
	* src/STAT_FrontEnd.C : re-enabled MRNet failure recovery with FGFS

2013-07-30 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : disabled serial attach for BlueGene
	* src/STAT_FrontEnd.C : first-level of check node access look for localhost
	* src/STATD.C : add serial processes after log enabled

2013-07-24 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added maintain user zoom option for node manipulation operations

2013-07-17 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : new filter/searchable ptab dialog
	* scripts/STATview.py : new cut/hide programming models interface

2013-06-07 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : fixed bug in TV attach when STAT not attached
	* scripts/STATGUI.py : user can add command-line args to TV/DDT
